Header part one

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <html>
-    <head>
-        <title>E-Comm Website by Code Step By Step</title>
-        <link href="style.css" rel="stylesheet" />
-        <style>
-            h1{background-color: red;}
-        </style>
-    </head>
-    <body>
-        <h1 style="color: green;">E-comm Project</h1>
-    </body>
+  <head>
+    <title>E-Comm Website by Code Step By Step</title>
+    <link href="style.css" rel="stylesheet" />
+    <link href="common.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="header">
+        <div class="logo arrange-left wid-25">
+          <h1><span>E</span><span>Comm</span></h1>
+        </div>
+        <div class="search-product arrange-left wid-50">
+          <input type="text" placeholder="Search for Products" />
+          <button>Search</button>
+        </div>
+        <div class="selected-product arrange-left wid-25">
+          <button class="common-btn"><span>0</span></button>
+          <button class="common-btn"><span>0</span></button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
