Done with header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
     <title>E-Comm Website by Code Step By Step</title>
     <link href="style.css" rel="stylesheet" />
     <link href="common.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -12,11 +25,17 @@
         </div>
         <div class="search-product arrange-left wid-50">
           <input type="text" placeholder="Search for Products" />
-          <button>Search</button>
+          <button>
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </div>
         <div class="selected-product arrange-left wid-25">
-          <button class="common-btn"><span>0</span></button>
-          <button class="common-btn"><span>0</span></button>
+          <button class="common-btn"><span>
+            <i class="fa-solid fa-cart-arrow-down"></i>
+            0</span></button>
+          <button class="common-btn"><span>
+            <i class="fa-solid fa-heart"></i>
+            0</span></button>
         </div>
       </div>
     </div>
