done with category list

--- a/index.html
+++ b/index.html
@@ -39,5 +39,27 @@
         </div>
       </div>
     </div>
+    <div class="full-banner-warapper">
+    <div class="wrapper next-row">
+      <div class="banner-area category-list arrange-left wid-25">
+        <div class="list-header">
+          <h4>Categories</h4>
+          <span>
+            <i class="fa-solid fa-angle-down"></i>
+          </span>
+        </div>
+        <ul>
+          <li><a href="#">Shirts</a></li>
+          <li><a href="#">T-shirts</a></li>
+          <li><a href="#">Shoes</a></li>
+          <li><a href="#">SmartPhones</a></li>
+          <li><a href="#">Laptop</a></li>
+          <li><a href="#">Jackets</a></li>
+          <li><a href="#">Kitchens</a></li>
+          
+        </ul>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
