--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
           
         </ul>
       </div>
+      <div class="wid-75 arrange-left">
+        <div class="shop-menu">
+          <ul class="left-menu-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li class="dropdown-head"><a href="#">Product Details
+              <i class="fa-solid fa-angle-down"></i>
+            </a>
+              <ul class="dropdown">
+                <li><a href="#">Cart</a></li>
+                <li><a href="#">Checkout</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul class="right-menu-list">
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Register</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
   </body>
