done with banner

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a href="#">Laptop</a></li>
           <li><a href="#">Jackets</a></li>
           <li><a href="#">Kitchens</a></li>
-          
+          <li><a href="#">Toys</a></li>
         </ul>
       </div>
       <div class="wid-75 arrange-left">
@@ -78,6 +78,14 @@
             <li><a href="#">Login</a></li>
             <li><a href="#">Register</a></li>
           </ul>
+        </div>
+        <div class="banner">
+          <img src="./banner.jpg" alt="banner" />
+          <div class="banner-text">
+            <h4>10% off Your First Order</h4>
+            <h3>Fashionable Dress</h3>
+            <a class="show-now">Show Now</a>
+          </div>
         </div>
       </div>
     </div>
