Done with app feature

--- a/index.html
+++ b/index.html
@@ -30,65 +30,107 @@
           </button>
         </div>
         <div class="selected-product arrange-left wid-25">
-          <button class="common-btn"><span>
-            <i class="fa-solid fa-cart-arrow-down"></i>
-            0</span></button>
-          <button class="common-btn"><span>
-            <i class="fa-solid fa-heart"></i>
-            0</span></button>
+          <button class="common-btn">
+            <span>
+              <i class="fa-solid fa-cart-arrow-down"></i>
+              0</span
+            >
+          </button>
+          <button class="common-btn">
+            <span>
+              <i class="fa-solid fa-heart"></i>
+              0</span
+            >
+          </button>
         </div>
       </div>
     </div>
     <div class="full-banner-warapper">
-    <div class="wrapper next-row">
-      <div class="banner-area category-list arrange-left wid-25">
-        <div class="list-header">
-          <h4>Categories</h4>
-          <span>
-            <i class="fa-solid fa-angle-down"></i>
-          </span>
-        </div>
-        <ul>
-          <li><a href="#">Shirts</a></li>
-          <li><a href="#">T-shirts</a></li>
-          <li><a href="#">Shoes</a></li>
-          <li><a href="#">SmartPhones</a></li>
-          <li><a href="#">Laptop</a></li>
-          <li><a href="#">Jackets</a></li>
-          <li><a href="#">Kitchens</a></li>
-          <li><a href="#">Toys</a></li>
-        </ul>
-      </div>
-      <div class="wid-75 arrange-left">
-        <div class="shop-menu">
-          <ul class="left-menu-list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li class="dropdown-head"><a href="#">Product Details
+      <div class="wrapper next-row">
+        <div class="banner-area category-list arrange-left wid-25">
+          <div class="list-header">
+            <h4>Categories</h4>
+            <span>
               <i class="fa-solid fa-angle-down"></i>
-            </a>
-              <ul class="dropdown">
-                <li><a href="#">Cart</a></li>
-                <li><a href="#">Checkout</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-          <ul class="right-menu-list">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
+            </span>
+          </div>
+          <ul>
+            <li><a href="#">Shirts</a></li>
+            <li><a href="#">T-shirts</a></li>
+            <li><a href="#">Shoes</a></li>
+            <li><a href="#">SmartPhones</a></li>
+            <li><a href="#">Laptop</a></li>
+            <li><a href="#">Jackets</a></li>
+            <li><a href="#">Kitchens</a></li>
+            <li><a href="#">Toys</a></li>
           </ul>
         </div>
-        <div class="banner">
-          <img src="./banner.jpg" alt="banner" />
-          <div class="banner-text">
-            <h4>10% off Your First Order</h4>
-            <h3>Fashionable Dress</h3>
-            <a class="show-now">Show Now</a>
+        <div class="wid-75 arrange-left">
+          <div class="shop-menu">
+            <ul class="left-menu-list">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li class="dropdown-head">
+                <a href="#"
+                  >Product Details
+                  <i class="fa-solid fa-angle-down"></i>
+                </a>
+                <ul class="dropdown">
+                  <li><a href="#">Cart</a></li>
+                  <li><a href="#">Checkout</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+            <ul class="right-menu-list">
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Register</a></li>
+            </ul>
+          </div>
+          <div class="banner">
+            <img src="./banner.jpg" alt="banner" />
+            <div class="banner-text">
+              <h4>10% off Your First Order</h4>
+              <h3>Fashionable Dress</h3>
+              <a class="show-now">Show Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper next-row">
+        <div class="wid-25 arrange-left">
+          <div class="features-point">
+            <span class="icon-text-wrap">
+              <i class="fa-solid fa-check"></i>
+              <span> Quality Products</span>
+            </span>
+          </div>
+        </div>
+        <div class="wid-25 arrange-left">
+          <div class="features-point">
+            <span class="icon-text-wrap">
+              <i class="fa-solid fa-shipping-fast"></i>
+              <span> Free Shipping</span>
+            </span>
+          </div>
+        </div>
+        <div class="wid-25 arrange-left">
+          <div class="features-point">
+            <span class="icon-text-wrap">
+              <i class="fa-solid fa-exchange-alt"></i>
+              <span>14 Days Return</span>
+            </span>
+          </div>
+        </div>
+        <div class="wid-25 arrange-left">
+          <div class="features-point">
+            <span class="icon-text-wrap">
+              <i class="fa-solid fa-phone-volume"></i>
+              <span>24/7 Support</span>
+            </span>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </body>
 </html>
