Done with category item

--- a/index.html
+++ b/index.html
@@ -131,6 +131,41 @@
           </div>
         </div>
       </div>
+      <div class="wrapper next-row">
+        <div class="wid-33 arrange-left">
+          <div class="category-item">
+            <div class="product-count">20 Products</div>
+            <div class="category-img">
+              <img src="./cat-1.jpg" />
+            </div>
+            <div class="category-type">
+              <h5>Men's Dresses</h5>
+            </div>
+          </div>
+        </div>
+        <div class="wid-33 arrange-left">
+          <div class="category-item">
+            <div class="product-count">80 Products</div>
+            <div class="category-img">
+              <img src="./cat-2.jpg" />
+            </div>
+            <div class="category-type">
+              <h5>Women's Dresses</h5>
+            </div>
+          </div>
+        </div>
+        <div class="wid-33 arrange-left">
+          <div class="category-item">
+            <div class="product-count">40 Products</div>
+            <div class="category-img">
+              <img src="./cat-3.jpg" />
+            </div>
+            <div class="category-type">
+              <h5>Boy's Dresses</h5>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
