Done with offer banner

--- a/index.html
+++ b/index.html
@@ -166,6 +166,28 @@
           </div>
         </div>
       </div>
+      <div class="wrapper next-row">
+        <div class="wid-50 arrange-left">
+          <div class="offer-banner">
+            <img src="./offer-1.png" alt="" />
+            <div class="offer-text">
+              <h5>20% off the all order</h5>
+              <h3>Spring Collection</h3>
+              <button>Show Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="wid-50 arrange-left">
+          <div class="offer-banner">
+            <img class="flip-img" src="./offer-2.png" alt="" />
+            <div class="offer-text">
+              <h5>30% off the all order</h5>
+              <h3>Winter Collection</h3>
+              <button>Show Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
