Done with items

--- a/index.html
+++ b/index.html
@@ -188,6 +188,105 @@
           </div>
         </div>
       </div>
+      <div class="wrapper next-row">
+        <div class="wid-25 arrange-left">
+          <div class="cart">
+            <div>
+              <img src="./product-1.jpg" alt="" />
+            </div>
+            <div class="cart-details">
+              <h6 class="name-head">Colorful Stylish Shirt</h6>
+              <div class="cart-price">
+                <h6 class="current">$123.00</h6>
+                <h6 class="last">$130.00</h6>
+              </div>
+            </div>
+            <div class="cart-footer">
+              <a href="#">
+                <i class="fa-solid fa-eye"></i>
+                View Details
+              </a>
+              <a href="#">
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                Add to Cart
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="wid-25 arrange-left">
+          <div class="cart">
+            <div>
+              <img src="./product-2.jpg" alt="" />
+            </div>
+            <div class="cart-details">
+              <h6 class="name-head">Colorful Stylish Shirt</h6>
+              <div class="cart-price">
+                <h6 class="current">$123.00</h6>
+                <h6 class="last">$130.00</h6>
+              </div>
+            </div>
+            <div class="cart-footer">
+              <a href="#">
+                <i class="fa-solid fa-eye"></i>
+                View Details
+              </a>
+              <a href="#">
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                Add to Cart
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="wid-25 arrange-left">
+          <div class="cart">
+            <div>
+              <img src="./product-3.jpg" alt="" />
+            </div>
+            <div class="cart-details">
+              <h6 class="name-head">Colorful Stylish Shirt
+              </h6>
+              <div class="cart-price">
+                <h6 class="current">$123.00</h6>
+                <h6 class="last">$130.00</h6>
+              </div>
+            </div>
+            <div class="cart-footer">
+              <a href="#">
+                <i class="fa-solid fa-eye"></i>
+                View Details
+              </a>
+              <a href="#">
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                Add to Cart
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="wid-25 arrange-left">
+          <div class="cart">
+            <div>
+              <img src="./product-4.jpg" alt="" />
+            </div>
+            <div class="cart-details">
+              <h6 class="name-head">Colorful Stylish Shirt</h6>
+              <div class="cart-price">
+                <h6 class="current">$123.00</h6>
+                <h6 class="last">$130.00</h6>
+              </div>
+            </div>
+            <div class="cart-footer">
+              <a href="#">
+                <i class="fa-solid fa-eye"></i>
+                View Details
+              </a>
+              <a href="#">
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                Add to Cart
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
