Done with stay updated

--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
               <img src="./product-3.jpg" alt="" />
             </div>
             <div class="cart-details">
-              <h6 class="name-head">Colorful Stylish Shirt
-              </h6>
+              <h6 class="name-head">Colorful Stylish Shirt</h6>
               <div class="cart-price">
                 <h6 class="current">$123.00</h6>
                 <h6 class="last">$130.00</h6>
@@ -284,6 +283,23 @@
                 Add to Cart
               </a>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper next-row">
+        <div class="stay-updated">
+          <h1>Stay Updated</h1>
+          <p class="update-text">
+            Amet lorem at rebum amet dolores. Elitr lorem dolor sed amet diam
+            labore at justo ipsum eirmod duo labore labore.
+          </p>
+          <div class="updated-inputs">
+            <input
+              type="text"
+              class="email-input"
+              placeholder="Email Goes Here"
+            />
+            <button class="email-btn">Subscribe</button>
           </div>
         </div>
       </div>
