start with footer

--- a/index.html
+++ b/index.html
@@ -303,6 +303,30 @@
           </div>
         </div>
       </div>
+      <div class="wrapper next-row">
+        <div class="footer">
+          <div class="wid-25">
+            <div class="logo">
+              <h1><span>E</span><span>Comm</span></h1>
+            </div>
+            <p class="footer-desc">
+              Dolore erat dolor sit lorem vero amet. Sed sit lorem magna, ipsum
+              no sit erat lorem et magna ipsum dolore amet erat.
+            </p>
+            <ul class="contact-list">
+              <li>
+                <i class="fa fa-map-marker-alt icon"></i>123 Street, New York, USA
+              </li>
+              <li>
+                <i class="fa fa-envelope icon"></i>info@example.com
+              </li>
+              <li>
+                <i class="fa fa-phone icon"></i>+012 345 67890
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
