--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
       </div>
       <div class="wrapper next-row">
         <div class="footer">
-          <div class="wid-25">
+          <div class="wid-25 arrange-left margin-right-5">
             <div class="logo">
               <h1><span>E</span><span>Comm</span></h1>
             </div>
@@ -315,15 +315,88 @@
             </p>
             <ul class="contact-list">
               <li>
-                <i class="fa fa-map-marker-alt icon"></i>123 Street, New York, USA
+                <i class="fa fa-map-marker-alt icon"></i>123 Street, New York,
+                USA
+              </li>
+              <li><i class="fa fa-envelope icon"></i>info@example.com</li>
+              <li><i class="fa fa-phone icon"></i>+012 345 67890</li>
+            </ul>
+          </div>
+          <div class="wid-25 quick-links arrange-left">
+            <h3>Quick Links</h3>
+            <ul>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Home</span></a
+                >
               </li>
               <li>
-                <i class="fa fa-envelope icon"></i>info@example.com
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Our Shops</span></a
+                >
               </li>
               <li>
-                <i class="fa fa-phone icon"></i>+012 345 67890
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Shop Details</span></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Checkout</span></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>About Us</span></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Cart</span></a
+                >
               </li>
             </ul>
+          </div>
+          <div class="wid-25 quick-links arrange-left">
+            <h3>Quick Links</h3>
+            <ul>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Home</span></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Our Shops</span></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Shop Details</span></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Checkout</span></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>About Us</span></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa fa-angle-right"></i><span>Cart</span></a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="wid-25 arrange-left">
+            <h3>News Letter</h3>
+            <input type="text" class="footer-input" placeholder="Enter Name" />
+            <input type="text" class="footer-input" placeholder="Enter Email" />
+            <button class="footer-button">Subscribe</button>
           </div>
         </div>
       </div>
