--- a/index.html
+++ b/index.html
@@ -303,6 +303,14 @@
           </div>
         </div>
       </div>
+      <div class="vender-list">
+        <img src="./vendor-1.jpg" alt="">
+        <img src="./vendor-2.jpg" alt="">
+        <img src="./vendor-3.jpg" alt="">
+        <img src="./vendor-4.jpg" alt="">
+        <img src="./vendor-5.jpg" alt="">
+
+      </div>
       <div class="wrapper next-row">
         <div class="footer">
           <div class="wid-25 arrange-left margin-right-5">
@@ -399,6 +407,12 @@
             <button class="footer-button">Subscribe</button>
           </div>
         </div>
+      </div>
+      <div class="copy-right">
+        <div>
+          © <b>Code Step by Step</b>. All Rights Reserved. Designed by <b>Anil Sidhu</b>
+        </div>
+        <img src="./payments.png" alt="">
       </div>
     </div>
   </body>
