--- a/index.html
+++ b/index.html
@@ -304,12 +304,11 @@
         </div>
       </div>
       <div class="vender-list">
-        <img src="./vendor-1.jpg" alt="">
-        <img src="./vendor-2.jpg" alt="">
-        <img src="./vendor-3.jpg" alt="">
-        <img src="./vendor-4.jpg" alt="">
-        <img src="./vendor-5.jpg" alt="">
-
+        <img src="./vendor-1.jpg" alt="" />
+        <img src="./vendor-2.jpg" alt="" />
+        <img src="./vendor-3.jpg" alt="" />
+        <img src="./vendor-4.jpg" alt="" />
+        <img src="./vendor-5.jpg" alt="" />
       </div>
       <div class="wrapper next-row">
         <div class="footer">
@@ -410,9 +409,10 @@
       </div>
       <div class="copy-right">
         <div>
-          © <b>Code Step by Step</b>. All Rights Reserved. Designed by <b>Anil Sidhu</b>
+          © <b>Code Step by Step</b>. All Rights Reserved. Designed by
+          <b>Anil Sidhu</b>
         </div>
-        <img src="./payments.png" alt="">
+        <img src="./payments.png" alt="" />
       </div>
     </div>
   </body>
