--- a/shop.html
+++ b/shop.html
@@ -50,6 +50,230 @@
         <h1>Women Dress Collection</h1>
         <h3>- Our Shop -</h3>
       </div>
+
+      <div class="wrapper next-row">
+        <div class="sort-options">
+          <select name="" id="">
+            <option value="1">By Name</option>
+            <option value="2">By Rating</option>
+            <option value="3">By Latest</option>
+          </select>
+        </div>
+        <div class="wid-25 arrange-left">
+          <h1>Filter</h1>
+        </div>
+        <div class="wid-75 arrange-left">
+          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>          <div class="wid-33 arrange-left">
+            <div class="cart">
+              <div>
+                <img src="./product-1.jpg" alt="" />
+              </div>
+              <div class="cart-details">
+                <h6 class="name-head">Colorful Stylish Shirt</h6>
+                <div class="cart-price">
+                  <h6 class="current">$123.00</h6>
+                  <h6 class="last">$130.00</h6>
+                </div>
+              </div>
+              <div class="cart-footer">
+                <a href="#">
+                  <i class="fa-solid fa-eye"></i>
+                  View Details
+                </a>
+                <a href="#">
+                  <i class="fa-solid fa-cart-arrow-down"></i>
+                  Add to Cart
+                </a>
+              </div>
+            </div>
+          </div>
+      </div>
       <div class="wrapper next-row">
         <div class="footer">
           <div class="wid-25 arrange-left margin-right-5">
