Done with custom button

--- a/shop.html
+++ b/shop.html
@@ -61,6 +61,10 @@
         </div>
         <div class="wid-25 arrange-left">
           <h1>Filter</h1>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="price-all">
+          <label class="custom-control-label" for="price-all">$0 - $100</label>
+          </div>
         </div>
         <div class="wid-75 arrange-left">
           <div class="wid-33 arrange-left">
