Startwith cart page

--- a/shop.html
+++ b/shop.html
@@ -60,10 +60,83 @@
           </select>
         </div>
         <div class="wid-25 arrange-left">
-          <h1>Filter</h1>
+          <h3>Filter By Price</h3>
           <div class="custom-control-check">
             <input type="checkbox" class="custom-control-input" checked="" id="price-all">
-          <label class="custom-control-label" for="price-all">$0 - $100</label>
+          <label class="custom-control-label" for="price-all">All Price</label>
+          <span class="filter-prod-count">1000</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="0-100">
+          <label class="custom-control-label" for="0-100">$0 - $100</label>
+          <span class="filter-prod-count">100</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="100-200">
+          <label class="custom-control-label" for="100-200">$100 - $200</label>
+          <span class="filter-prod-count">150</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="200-300">
+          <label class="custom-control-label" for="200-300">$200 - $300</label>
+          <span class="filter-prod-count">160</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="300-above">
+          <label class="custom-control-label" for="300-above">$300 - $above</label>
+          <span class="filter-prod-count">500</span>
+          </div>
+          <h3>Filter By Color</h3>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="color-all">
+          <label class="custom-control-label" for="color-all">All Color</label>
+          <span class="filter-prod-count">1000</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="black">
+          <label class="custom-control-label" for="black">Black</label>
+          <span class="filter-prod-count">200</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="red">
+          <label class="custom-control-label" for="Red">Red</label>
+          <span class="filter-prod-count">150</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="yellow">
+          <label class="custom-control-label" for="yellow">Yellow</label>
+          <span class="filter-prod-count">360</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="white">
+          <label class="custom-control-label" for="white">White</label>
+          <span class="filter-prod-count">300</span>
+          </div>
+          <h3>Filter By Size</h3>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="small">
+          <label class="custom-control-label" for="small">Small</label>
+          <span class="filter-prod-count">1000</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="m">
+          <label class="custom-control-label" for="m">Medium</label>
+          <span class="filter-prod-count">140</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="l">
+          <label class="custom-control-label" for="l">Large</label>
+          <span class="filter-prod-count">450</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="xl">
+          <label class="custom-control-label" for="xl">Extra Large</label>
+          <span class="filter-prod-count">130</span>
+          </div>
+          <div class="custom-control-check">
+            <input type="checkbox" class="custom-control-input" checked="" id="xxl">
+          <label class="custom-control-label" for="xxl">XXL</label>
+          <span class="filter-prod-count">50</span>
           </div>
         </div>
         <div class="wid-75 arrange-left">
