--- a/cart.html
+++ b/cart.html
@@ -50,8 +50,110 @@
         <h1>Your shopping Details</h1>
         <h3>- Cart Details -</h3>
       </div>
-
-     
+      <div class="wrapper next-row">
+        <div class="wid-75 arrange-left">
+          <div class="cart-details">
+            <table>
+              <thead>
+                <tr>
+                  <th>Product</th>
+                  <th>Price</th>
+                  <th>Quantity</th>
+                  <th>Total</th>
+                  <th>Remove</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="text-with-img">
+                    <img src="./cat-1.jpg" alt="" /><span>Colorful Shirt</span>
+                  </td>
+                  <td><span>$150</span></td>
+                  <td>
+                    <div class="quantity-input">
+                      <button>-</button>
+                      <input type="text" value="1" />
+                      <button>+</button>
+                    </div>
+                  </td>
+                  <td>$150</td>
+                  <td>
+                    <i class="fa fa-remove icon custom-delete-button"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="text-with-img">
+                    <img src="./cat-2.jpg" alt="" /><span>Shoes</span>
+                  </td>
+                  <td><span>$350</span></td>
+                  <td>
+                    <div class="quantity-input">
+                      <button>-</button>
+                      <input type="text" value="2" />
+                      <button>+</button>
+                    </div>
+                  </td>
+                  <td>$700</td>
+                  <td>
+                    <i class="fa fa-remove icon custom-delete-button"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="text-with-img">
+                    <img src="./cat-3.jpg" alt="" /><span>Colorful Shirt</span>
+                  </td>
+                  <td><span>$100</span></td>
+                  <td>
+                    <div class="quantity-input">
+                      <button>-</button>
+                      <input type="text" value="1" />
+                      <button>+</button>
+                    </div>
+                  </td>
+                  <td>$100</td>
+                  <td>
+                    <i class="fa fa-remove icon custom-delete-button"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="text-with-img">
+                    <img src="./cat-1.jpg" alt="" /><span>Colorful Shirt</span>
+                  </td>
+                  <td><span>$150</span></td>
+                  <td>
+                    <div class="quantity-input">
+                      <button>-</button>
+                      <input type="text" value="1" />
+                      <button>+</button>
+                    </div>
+                  </td>
+                  <td>$150</td>
+                  <td>
+                    <i class="fa fa-remove icon custom-delete-button"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="text-with-img">
+                    <img src="./cat-2.jpg" alt="" /><span>Colorful Shirt</span>
+                  </td>
+                  <td><span>$150</span></td>
+                  <td>
+                    <div class="quantity-input">
+                      <button>-</button>
+                      <input type="text" value="1" />
+                      <button>+</button>
+                    </div>
+                  </td>
+                  <td>$150</td>
+                  <td>
+                    <i class="fa fa-remove icon custom-delete-button"></i>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
       <div class="wrapper next-row">
         <div class="footer">
           <div class="wid-25 arrange-left margin-right-5">
