Done with cart page

--- a/cart.html
+++ b/cart.html
@@ -153,6 +153,33 @@
             </table>
           </div>
         </div>
+        <div class="wid-25 arrange-left">
+          <div class="cart-summary-wrapper">
+            <div class="coupon-inputs">
+              <input type="text" placeholder="Enter Couple" />
+              <button>Apply Couple</button>
+            </div>
+            <div class="cart-summary-body">
+              <div class="cart-summy-item">
+                <h6>Sub Total</h6>
+                <h6>$150</h6>
+              </div>
+              <div class="cart-summy-item">
+                <h6>Shipping</h6>
+                <h6>$100</h6>
+              </div>
+            </div>
+            <div class="total-wrapper">
+              <div class="total-head">
+                <h4>Total</h4>
+                <h4>$160</h4>
+              </div>
+              <div class="proceed-input">
+                <button>Proceed To Checkout</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="wrapper next-row">
         <div class="footer">
